# devnet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/debug/: eval.csv  train.csv
data/debug/models/: example.pth
notebooks/: analysis.ipynb
pyproj/: setup.cfg
src/: main.py
src/conf/: main.yaml
src/devnet/: config.py  trainer.py
tests/: test_devnet.py
