[tool.poetry]
name = "devnet"
version = "0.1.0"
description = "Unofficial pytorch implementation of deviation network for table data."
authors = ["Yuji Kamiya <y.kamiya0@gmail.com>"]
license = "MIT"
homepage = "https://github.com/y-kamiya/devnet"
repository = "https://github.com/y-kamiya/devnet"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
torch = "^1.10.2"
hydra-core = "^1.1.1"
logzero = "^1.7.0"
pandas = "1.3.5"
sklearn = "^0.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.3.3"
ipykernel = "^6.13.0"
shap = "^0.38.1"
xgboost = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
